fix responsiveness on mobile for product card

--- a/client/src/assets/scss/base/_utilities.scss
+++ b/client/src/assets/scss/base/_utilities.scss
@@ -13,6 +13,10 @@
   &-ai-c {
     align-items: center;
   }
+
+  .gap-2 {
+    gap: 0.5rem;
+  }
 }
 
 // Visibility
