--- a/client/src/assets/scss/pages/_products.scss
+++ b/client/src/assets/scss/pages/_products.scss
@@ -8,7 +8,7 @@
 
   .single-product {
     flex: 1;
-    min-width: 25rem;
+    min-width: fit-content;
     border: 2px solid $gray;
     padding: 1.5rem;
 
